# telegram_meme_autoposter

./: .coverage  .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Dockerfile  GEMINI.md  README.md  babel.cfg  config.example.ini  config.ini.example  docker-compose-full.yaml  docker-compose.yaml  dockerfile  env.example  healthcheck.py  pyproject.toml  requirements.txt  run_bg.sh
.github/workflows/: autocodexfix.yml  ci.yml  codeql.yml
frontend/: index.html  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BadgeStatus.tsx  BatchGroupCard.tsx  ClickableImage.tsx  DashboardLayout.tsx  DataTable.tsx  EventFeed.tsx  MediaCard.tsx  MediaGroupCard.tsx  PagePagination.tsx  PageState.tsx  QueueItemCard.tsx  RouteGuards.tsx  ScheduleDateTimePicker.tsx  SectionHeader.tsx  SessionProvider.tsx  StatCard.tsx  SwipeModerationDeck.tsx
frontend/src/lib/: api.ts  config.ts  datetime.ts  event-log.ts  i18n.ts  mockData.ts
frontend/src/pages/: BatchPage.tsx  EventsPage.tsx  Index.tsx  JobsPage.tsx  LeaderboardPage.tsx  LoginPage.tsx  NotFound.tsx  PostsPage.tsx  QueuePage.tsx  SettingsPage.tsx  StatsPage.tsx  SuggestionsPage.tsx  SwipeReviewPage.tsx  TrashPage.tsx
frontend/src/test/: clickable-image.test.tsx  datetime.test.ts  event-log.test.ts  jobs-page.test.tsx  media-group-card.test.tsx  swipe-review-page.test.tsx
grafana/: collector.yaml  docker-compose.yaml  tempo.yaml
scripts/: i18n.sh
telegram_auto_poster/: __init__.py  config.py  main.py  req.txt  run_bg.sh  ult.py
telegram_auto_poster/bot/: __init__.py  bot.py  callbacks.py  commands.py  handlers.py  permissions.py
telegram_auto_poster/client/: __init__.py  client.py
telegram_auto_poster/locales/: messages.pot
telegram_auto_poster/media/: __init__.py  photo.py  video.py
telegram_auto_poster/utils/: __init__.py  caption.py  captioner.py  channel_analytics.py  channels.py  db.py  deduplication.py  garage.py  general.py  i18n.py  jobs.py  logger_setup.py  pogocache.py  scheduler.py  stats.py  storage.py  telemetry.py  timezone.py  trash.py  ui.py
telegram_auto_poster/web/: __init__.py  app.py  auth.py
telegram_auto_poster/web/templates/: _batch_grid.html  base.html  (+13 more)
telegram_meme_autoposter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: conftest.py  test_batch_browser_callback.py  test_client_resilience.py  test_commands.py  test_config.py  test_daily_stats_callback.py  test_db.py  test_deduplication.py  test_general.py  test_handle_media.py  test_healthcheck.py  test_i18n.py  test_logger_setup.py  test_media.py  test_permissions.py  test_process_media_group.py  test_report_generation.py  test_run_bg.py  test_schedule.py  test_schedule_browser_callback.py  test_stats.py  test_storage.py  test_telemetry.py  test_ui.py  test_unschedule_callback.py
test/bot/: test_batch_browser_callback.py  test_callbacks_unexpected_errors.py  test_commands.py  test_daily_stats_callback.py  test_handle_media.py  test_permissions.py  test_process_media_group.py  test_schedule_browser_callback.py  test_unschedule_callback.py
test/media/: test_media.py
test/utils/: test_caption.py  test_channel_analytics.py  test_channels.py  test_client_resilience.py  test_db.py  test_deduplication.py  test_general.py  test_jobs.py  test_report_generation.py  test_schedule.py  test_send_media.py  test_stats.py  test_storage.py  test_timezone.py
test/web/: conftest.py  test_auth.py  test_web_app.py  test_web_groups.py  test_web_views.py
tests/: conftest.py  test_batch_command.py  test_bot_commands.py  test_bot_setup.py  test_captioner.py  test_help_start.py  test_notify_ok.py
(+4 files in other folders)
